--- a/projects.html
+++ b/projects.html
@@ -11,12 +11,29 @@
             font-size: 20px;
         }
         #page{
-            background-image: url('bg.webp');
-            box-sizing: border-box;
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            
+            background-color: rgb(86, 88, 90);
+        }
+        #intro
+        {
+            background-color: rgb(52, 53, 53);
+            height: fit-content;
+        }
+        #greet
+        {
+            background-color: rgb(52, 53, 53);
+            color: white;
+        }
+        button
+        {
+            background-color: rgb(52, 53, 53);
+            color: whitesmoke;
+            font-family:'Times New Roman', Times, serif;
+            margin-left: 200px;
+            margin-top: 20px;
+            font-size: 26px;
+            border-radius: 20px;
+            border-color:  rgb(52, 53, 53);
+            padding: auto;
         }
         p{
             /* background-color:rgb(4, 207, 207); */
@@ -28,6 +45,9 @@
         }
     </style>
     <script>
+        function navigate(page){
+        window.location.href = page;
+        }
         function displayDescription(){
             event.stopPropagation();
 
@@ -47,6 +67,17 @@
     </script>
 </head>
 <body>
+    <header id="intro" height = f>
+        <h1 id="greet" align="center">Hello Everyone!<br>Welcome to my Personal Portfolio</h1>
+        <button onclick="navigate('index.html')">Home</button>
+        <button onclick="navigate('skills.html')">Skills</button>
+        <button onclick="navigate('projects.html')">Projects</button>
+        <button>Contact Me</button>
+        <!-- <a href="personalPortfolio.html">Home</a>
+        <a href="skills.html">Skills</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact Us</a> -->
+    </header>
     <div id="page">
         <ol float="left" id="names" onclick="displayDescription()">
             <div class="description">
