--- a/skills.html
+++ b/skills.html
@@ -9,13 +9,16 @@
             background: radial-gradient(#454546, #2c2d2e);
             float: left;
             width: 100%;
-            height: 150px;
+            height: 165px;
             position: relative;
         }
         #myname{
             margin-left: 300px;
             font-family: 'Times New Roman', Times, serif;
             font-size: 22px;
+            /* border-style: groove;
+            border-radius: 20px;
+            border-color: gray; */
             color: white;
         }
         #designation{
@@ -28,7 +31,11 @@
             background-image: url('sss.jpg');
             background-repeat: no-repeat;
             width: 100%;
-            border-radius: 200px;
+            border-color: gray;
+            border-style: solid;
+            border-top-left-radius: 100px;
+            border-bottom-left-radius: 100px;
+            border-width: 8px;
             margin-left: 1100px;
             margin-top: 0;
             height: 150px;
@@ -83,6 +90,11 @@
             list-style: none;
         }
     </style>
+    <script>
+        function navigate(page){
+        window.location.href = page;
+    }
+    </script>
 </head>
 <body>
         <!-- <a href="personalPortfolio.html">Home</a>
@@ -95,6 +107,7 @@
         <br>
         <br>
         <label id="designation">Software Engineer</label>
+        <br>
         <br>
         <br>
 
