--- a/skills.html
+++ b/skills.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -97,10 +97,7 @@
     </script>
 </head>
 <body>
-        <!-- <a href="personalPortfolio.html">Home</a>
-        <a href="skills.html">Skills</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact Us</a> -->
+
     <div id="name">
         <br>
         <label id="myname">Affan Rahmathullah</label>
@@ -224,4 +221,323 @@
         </div>
     </div>
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Skills</title>
+    <style>
+        body {
+            background-color: #f4f4f4;
+            font-family: 'Times New Roman', Times, serif;
+            margin: 0;
+            padding: 0;
+            color: #333;
+        }
+        
+        #name {
+            background: #333;
+            color: white;
+            padding: 30px 0;
+            text-align: center;
+            position: relative;
+        }
+
+        #myname {
+            font-size: 32px;
+            font-weight: bold;
+        }
+
+        #designation {
+            font-size: 20px;
+            color: #aaa;
+        }
+
+        #myimage {
+            background-image: url('sss.jpg');
+            background-size: cover;
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            border: 5px solid white;
+            position: absolute;
+            top: 20px;
+            right: 20px;
+        }
+
+        button {
+            background-color: #333;
+            color: white;
+            font-size: 18px;
+            padding: 10px 20px;
+            margin: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #555;
+        }
+
+        .nav-buttons {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        #skills {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+        }
+
+        h2 {
+            font-size: 30px;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        .skill-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            justify-content: space-between;
+        }
+
+        .skill-item span {
+            font-size: 18px;
+            color: #333;
+            width: 150px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+        }
+
+        .progress {
+            width: 70%;
+            background-color: #ddd;
+            height: 20px;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .progress-bar {
+            height: 100%;
+            background-color: #4caf50;
+            text-align: center;
+            line-height: 20px;
+            color: white;
+            border-radius: 10px;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        /* Media Queries */
+        @media (max-width: 768px) {
+            #name {
+                padding: 20px 0;
+            }
+
+            #myname {
+                font-size: 28px;
+            }
+
+            #designation {
+                font-size: 18px;
+            }
+
+            #myimage {
+                width: 100px;
+                height: 100px;
+                top: 10px;
+                right: 10px;
+            }
+
+            .nav-buttons {
+                margin-top: 10px;
+            }
+
+            .skill-item {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .progress {
+                width: 100%;
+            }
+        }
+
+        @media (max-width: 480px) {
+            #name {
+                padding: 15px 0;
+            }
+
+            #myname {
+                font-size: 24px;
+            }
+
+            #designation {
+                font-size: 16px;
+            }
+
+            #myimage {
+                width: 80px;
+                height: 80px;
+            }
+
+            .nav-buttons button {
+                width: 100%;
+                font-size: 16px;
+            }
+
+            .skill-item {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+
+            .progress {
+                width: 100%;
+            }
+
+            footer {
+                padding: 8px;
+            }
+        }
+    </style>
+    <script>
+        function navigate(page) {
+            window.location.href = page;
+        }
+    </script>
+</head>
+<body>
+    <div id="name">
+        <div id="myimage"></div>
+        <h1 id="myname">Affan Rahmathullah</h1>
+        <p id="designation">Software Engineer</p>
+    </div>
+
+    <div class="nav-buttons">
+        <button onclick="navigate('index.html')">Home</button>
+        <button>Skills</button>
+        <button onclick="navigate('projects.html')">Projects</button>
+        <button>Contact Me</button>
+    </div>
+
+    <div id="skills">
+        <div id="skills_1">
+            <h2>Specialization</h2>
+            <div class="skill-item">
+                <span>App development</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 90%;">90%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Game development</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 80%;">80%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Web development</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 75%;">75%</div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div id="skills_2">
+            <h2>Languages Known</h2>
+            <div class="skill-item">
+                <span>English</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 95%;">95%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Hindi</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 100%;">100%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Urdu</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 100%;">100%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Tamil</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 100%;">100%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>French</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 45%;">45%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Arabic</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 60%;">60%</div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div id="skills_3">
+            <h2>Programming Languages</h2>
+            <div class="skill-item">
+                <span>Java</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 95%;">95%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>C, C++</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 90%;">90%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>Python</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 95%;">95%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>HTML, CSS, JavaScript</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 70%;">70%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>C#</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 75%;">75%</div>
+                </div>
+            </div>
+            <div class="skill-item">
+                <span>SQL</span>
+                <div class="progress">
+                    <div class="progress-bar" style="width: 85%;">85%</div>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
+
